Changed package and project name from pl.put.poznan.cs.gui4pddl to pl.poznan.put.cs.gui4pddl (corrected reverse domain order)

--- a/pl.put.poznan.cs.gui4pddl/.project
+++ b/pl.put.poznan.cs.gui4pddl/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pl.put.poznan.cs.gui4pddl</name>
+	<name>pl.poznan.put.cs.gui4pddl</name>
 	<comment></comment>
 	<projects>
 	</projects>
