--- a/pl.poznan.put.cs.gui4pddl/plugin.xml
+++ b/pl.poznan.put.cs.gui4pddl/plugin.xml
@@ -80,6 +80,12 @@
 		class="pl.poznan.put.cs.gui4pddl.preferences.EditorPreferencePage"
 		id="pl.poznan.put.cs.gui4pddl.preferences.EditorPreferencePage">
 	  </page>
+	  <page
+		name="Planners"
+		category="pl.poznan.put.cs.gui4pddl.preferences.MainPreferencePage"
+		class="pl.poznan.put.cs.gui4pddl.preferences.PlannerPreferencePage"
+		id="pl.poznan.put.cs.gui4pddl.preferences.PlannerPreferencePage">
+	  </page>
 	</extension>
 	
 	
@@ -122,7 +128,7 @@
             bannerImage="icons/pddl_file.gif">
             <launchMode
                   mode="run"
-                  description="PDDLApplicationTabGroupDescription.run">
+                  description="PDDL Launch Configuration">
             </launchMode>
     </launchConfigurationTabGroup>     
    </extension>
