--- a/pl.poznan.put.cs.gui4pddl/build.properties
+++ b/pl.poznan.put.cs.gui4pddl/build.properties
@@ -1,7 +1,9 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
-               plugin.xml
+               plugin.xml,\
+               lib/jna-4.0.0.jar,\
+               lib/jna-platform-4.0.0.jar,\
+               .
 customBuildCallbacks = customBuildCallbacks.xml
 customBuildCallbacks.failonerror = true
+source.. = src/
