--- a/pl.poznan.put.cs.gui4pddl/build.properties
+++ b/pl.poznan.put.cs.gui4pddl/build.properties
@@ -1,5 +1,6 @@
 output.. = bin/
-source.. = src/
+source.. = src/,\
+		   gen/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
