Plan browser introduced

--- a/pl.poznan.put.cs.gui4pddl/plugin.xml
+++ b/pl.poznan.put.cs.gui4pddl/plugin.xml
@@ -180,7 +180,7 @@
       </category>
       <view
             category="pl.poznan.put.cs.gui4pddl.views.plan"
-            class="pl.poznan.put.cs.gui4pddl.views.ui.PlanView"
+            class="pl.poznan.put.cs.gui4pddl.planview.ui.PlanView"
             icon="icons/pddl_file.gif"
             id="pl.poznan.put.cs.gui4pddl.views.PlanView"
             name="Plan">
