działające podpowiadanie składni na znaki specjalne.

--- a/pl.poznan.put.cs.gui4pddl/build.properties
+++ b/pl.poznan.put.cs.gui4pddl/build.properties
@@ -12,3 +12,8 @@ bin.includes = META-INF/,\
 src.includes = icons/
 customBuildCallbacks = buildTools/customBuildCallbacks.xml
 customBuildCallbacks.failonerror = true
+
+ContentAssistProposal.label=Content Assist@Ctrl+Space
+ContentAssistProposal.tooltip=Content Assist
+ContentAssistProposal.image=
+ContentAssistProposal.description=Content Assist
