Moved tests to uitests

--- a/pl.poznan.put.cs.gui4pddl.uitests/.project
+++ b/pl.poznan.put.cs.gui4pddl.uitests/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pl.poznan.put.cs.gui4pddl.tests</name>
+	<name>pl.poznan.put.cs.gui4pddl.uitests</name>
 	<comment></comment>
 	<projects>
 	</projects>
