Plan browser new version. Planner preferences file format changed. Planner preferences lazy loading added.

--- a/pl.poznan.put.cs.gui4pddl/plugin.xml
+++ b/pl.poznan.put.cs.gui4pddl/plugin.xml
@@ -195,6 +195,15 @@
             id="pl.poznan.put.cs.gui4pddl.PDDLProcessFactory">
       </processFactory>
    </extension>
+   <extension
+         point="org.eclipse.core.resources.markers"
+         id="planfoldermarker"
+         name="Plan Folder Marker" >
+         <super type="org.eclipse.core.resources.marker" />
+         <persistent value="true" />
+         
+         
+   </extension>
    
   
 </plugin>
