--- a/pl.poznan.put.cs.gui4pddl/plugin.xml
+++ b/pl.poznan.put.cs.gui4pddl/plugin.xml
@@ -138,6 +138,31 @@
    
    <extension
          point="org.eclipse.debug.ui.launchShortcuts">       
+            <shortcut
+            label="PDDL Application..."
+            icon="icons/pddl_file.gif"
+            modes="run"
+            class="pl.poznan.put.cs.gui4pddl.runners.PDDLLaunchShortcutWithDialog"
+            id="pl.poznan.put.cs.gui4pddl.runners.PDDLShortcutWithDialog">
+         <contextualLaunch>
+           <enablement>
+             <with variable="selection">
+               <count value="1"/>
+               <iterate>
+                 <or>
+                   <test property="org.eclipse.debug.ui.matchesPattern" value="*.pddl"/>
+                    <test property="org.eclipse.debug.ui.projectNature" value="pl.poznan.put.cs.gui4pddl.PDDLProject"/>                
+                 </or>
+               </iterate>
+             </with>
+           </enablement>
+  		 </contextualLaunch>     
+  		    <configurationType
+              id="pl.poznan.put.cs.gui4pddl.runners.PDDLApplication">
+       </configurationType>
+      </shortcut>
+         
+         
     <shortcut
             label="PDDL Application"
             icon="icons/pddl_file.gif"
@@ -156,11 +181,46 @@
                </iterate>
              </with>
            </enablement>
-  		 </contextualLaunch>
-  		 
-        
+  		 </contextualLaunch>     
+  		    <configurationType
+              id="pl.poznan.put.cs.gui4pddl.runners.PDDLApplication">
+       </configurationType>
       </shortcut>
+    
+      
+      
    </extension>
+   
+   <extension point="org.eclipse.ui.commands">
+    <command
+         name="PDDL Run Command New Configuration"
+         description="PDDL Run Command New Configuration"
+        categoryId="org.eclipse.debug.ui.category.run"
+         id="pl.poznan.put.cs.gui4pddl.runners.PDDLShortcutWithDialog.run">
+    </command>
+    
+      <command
+         name="PDDL Run Command"
+         description="PDDL Run Command"
+        categoryId="org.eclipse.debug.ui.category.run"
+         id="pl.poznan.put.cs.gui4pddl.runners.PDDLShortcut.run">
+    </command>
+    
+  </extension>	
+  
+  <extension point="org.eclipse.ui.bindings">       
+    <key sequence="M3+M2+X U"
+         contextId="org.eclipse.ui.globalScope"
+         commandId="pl.poznan.put.cs.gui4pddl.runners.PDDLShortcutWithDialog.run"
+         schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"/>
+         
+    <key sequence="M3+M2+X G"
+         contextId="org.eclipse.ui.globalScope"
+         commandId="pl.poznan.put.cs.gui4pddl.runners.PDDLShortcut.run"
+         schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"/>
+         
+  </extension>
+   
    <extension
          id="PDDLParser"
          point="org.eclipse.core.resources.builders">
